--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3307/marvel_api?serverTimezone=UTC&&useSSL=false&&UseUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:${MySQL_DB}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=rootroot
+spring.datasource.username=${MySQL_UN}
+spring.datasource.password=${MySQL_PASS}
 
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
-spring.liquibase.url=jdbc:mysql://localhost:3307/marvel_api?serverTimezone=UTC&&useSSL=false&&UseUnicode=true&characterEncoding=utf8
-spring.liquibase.user=root
-spring.liquibase.password=rootroot
+spring.liquibase.url=jdbc:${MySQL_DB}
+spring.liquibase.user=${MySQL_UN}
+spring.liquibase.password=${MySQL_PASS}
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
